fix reassigning box trips

--- a/html/nso/pbt/index.html
+++ b/html/nso/pbt/index.html
@@ -39,7 +39,7 @@
           <button
             sbForeach="Position: Jammer, Pivot, Blocker1, Blocker2, Blocker3: only"
             sbClass="sbUnserved: HasUnserved | sbInBox: PenaltyBox"
-            sbAttr="disabled: PenaltyBox"
+            sbProp="disabled: PenaltyBox"
             sbDisplay="RosterNumber: penQuestionMarkIfEmpty"
             sbSet="b.CurrentFielding: penGetFielding"
           ></button>
